--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 dj-database-url==0.4.2
 Django==1.9.9
 django-crispy-forms==1.6.0
+django-pagedown==0.1.1
 geoip2==2.4.2
 gunicorn==19.6.0
 ipaddress==1.0.18
